Backported offheap memory cleaning for java 11 from CASSANDRA-9608